--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="description" content="A 2D representation of a spinning black hole">
-  <meta name="keywords" content="Black hole, Oblate spheroid, spin, ring singularity, general relativity">
+	<meta name="description" content="Personal webpage of Semidan Robaina Estevez">
+  <meta name="keywords" content="web development, science">
   <meta name="author" content="Semidan Robaina Estevez">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Robaina</title>
+	<title>Semidán Robaina Estévez</title>
 	<link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32x32.png">
-	<!-- <script src="libs/plotly-latest.min.js"></script>
-	<script src="libs/math.min.js"></script> -->
   <link rel="stylesheet" href="styles.css">
 
 </head>
