--- a/index.html
+++ b/index.html
@@ -15,9 +15,47 @@
 
 </head>
 
-<body>
+<body
 
-  <h1>Semidán Robaina Estévez</h1>
+  <div class="name">
+  	<h1>Semidán Robaina Estévez</h1>
+  </div>
+
+	<div class="grid_container">
+		<div class="grid_item">
+			<h1 class="grid_item_title">The Pentagram of Venus</h1>
+			<a href="https://robaina.github.io/VenusPentagram/"><img src="assets/pentagram.png" alt="Responsive image"></a>
+		</div>
+		<div class="grid_item">
+			<h1 class="grid_item_title">Sudoku solver</h1>
+			<a href="https://robaina.github.io/Sudoku/"><img src="assets/sudoku.png" alt="Responsive image"></a>
+		</div>
+		<div class="grid_item">
+			<h1 class="grid_item_title">Metabolic flux orders</h1>
+			<a href="https://robaina.github.io/FluxOrders/"><img src="assets/fluxorders.png" alt="Responsive image"></a>
+		</div>
+		<div class="grid_item">
+			<h1 class="grid_item_title">Ayumu's game</h1>
+			<a href="https://robaina.github.io/AyumuGame/"><img src="assets/ayumu.png" alt="Responsive image"></a>
+		</div>
+		<div class="grid_item">
+			<h1 class="grid_item_title">Simon game</h1>
+			<a href="https://robaina.github.io/SimonGame/"><img src="assets/simon.png" alt="Responsive image"></a>
+		</div>
+		<div class="grid_item">
+			<h1 class="grid_item_title">Colorful N-Mobius</h1>
+			<a href="https://robaina.github.io/mobiusArt/"><img src="assets/mobiusart.png" alt="Responsive image"></a>
+		</div>
+		<div class="grid_item">
+			<h1 class="grid_item_title">Oblate Spheroidal Coordinates</h1>
+			<a href="https://robaina.github.io/OblateSpheroidal/"><img src="assets/oblatespheroidal.png" alt="Responsive image"></a>
+		</div>
+		<div class="grid_item">
+			<h1 class="grid_item_title">Function plotter</h1>
+			<a href="https://robaina.github.io/functionPlotter/"><img src="assets/functionplotter.png" alt="Responsive image"></a>
+		</div>
+
+	</div>
 
 </body>
 
