--- a/index.html
+++ b/index.html
@@ -1,62 +1,61 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="description" content="Personal webpage of Semidan Robaina Estevez">
-  <meta name="keywords" content="web development, science">
-  <meta name="author" content="Semidan Robaina Estevez">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="description" content="Personal webpage of Semidan Robaina Estevez">
+	  <meta name="keywords" content="web development, science">
+	  <meta name="author" content="Semidan Robaina Estevez">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Semidán Robaina Estévez</title>
-	<link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32x32.png">
-  <link rel="stylesheet" href="styles.css">
+		<title>Semidán Robaina Estévez</title>
+		<link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32x32.png">
+	  <link rel="stylesheet" href="styles.css">
 
-</head>
+	</head>
 
-<body
+	<body>
 
-  <div class="name">
-  	<h1>Semidán Robaina Estévez</h1>
-  </div>
+	  <h1 class="name">
+	  	Semidán Robaina Estévez
+	  </h1>
 
-	<div class="grid_container">
-		<div class="grid_item">
-			<h1 class="grid_item_title">The Pentagram of Venus</h1>
-			<a href="https://robaina.github.io/VenusPentagram/"><img src="assets/pentagram.png" alt="Responsive image"></a>
-		</div>
-		<div class="grid_item">
-			<h1 class="grid_item_title">Sudoku solver</h1>
-			<a href="https://robaina.github.io/Sudoku/"><img src="assets/sudoku.png" alt="Responsive image"></a>
-		</div>
-		<div class="grid_item">
-			<h1 class="grid_item_title">Metabolic flux orders</h1>
-			<a href="https://robaina.github.io/FluxOrders/"><img src="assets/fluxorders.png" alt="Responsive image"></a>
-		</div>
-		<div class="grid_item">
-			<h1 class="grid_item_title">Ayumu's game</h1>
-			<a href="https://robaina.github.io/AyumuGame/"><img src="assets/ayumu.png" alt="Responsive image"></a>
-		</div>
-		<div class="grid_item">
-			<h1 class="grid_item_title">Simon game</h1>
-			<a href="https://robaina.github.io/SimonGame/"><img src="assets/simon.png" alt="Responsive image"></a>
-		</div>
-		<div class="grid_item">
-			<h1 class="grid_item_title">Colorful N-Mobius</h1>
-			<a href="https://robaina.github.io/mobiusArt/"><img src="assets/mobiusart.png" alt="Responsive image"></a>
-		</div>
-		<div class="grid_item">
-			<h1 class="grid_item_title">Oblate Spheroidal Coordinates</h1>
-			<a href="https://robaina.github.io/OblateSpheroidal/"><img src="assets/oblatespheroidal.png" alt="Responsive image"></a>
-		</div>
-		<div class="grid_item">
-			<h1 class="grid_item_title">Function plotter</h1>
-			<a href="https://robaina.github.io/functionPlotter/"><img src="assets/functionplotter.png" alt="Responsive image"></a>
+		<div class="grid_container">
+			<div class="grid_item">
+				<h1 class="grid_item_title">The Pentagram of Venus</h1>
+				<a href="https://robaina.github.io/VenusPentagram/"><img src="assets/pentagram.png" alt="Responsive image"></a>
+			</div>
+			<div class="grid_item">
+				<h1 class="grid_item_title">Sudoku solver</h1>
+				<a href="https://robaina.github.io/Sudoku/"><img src="assets/sudoku.png" alt="Responsive image"></a>
+			</div>
+			<div class="grid_item">
+				<h1 class="grid_item_title">Metabolic flux orders</h1>
+				<a href="https://robaina.github.io/FluxOrders/"><img src="assets/fluxorders.png" alt="Responsive image"></a>
+			</div>
+			<div class="grid_item">
+				<h1 class="grid_item_title">Ayumu's game</h1>
+				<a href="https://robaina.github.io/AyumuGame/"><img src="assets/ayumu.png" alt="Responsive image"></a>
+			</div>
+			<div class="grid_item">
+				<h1 class="grid_item_title">Simon game</h1>
+				<a href="https://robaina.github.io/SimonGame/"><img src="assets/simon.png" alt="Responsive image"></a>
+			</div>
+			<div class="grid_item">
+				<h1 class="grid_item_title">Colorful N-Mobius</h1>
+				<a href="https://robaina.github.io/mobiusArt/"><img src="assets/mobiusart.png" alt="Responsive image"></a>
+			</div>
+			<div class="grid_item">
+				<h1 class="grid_item_title">Oblate Spheroidal Coordinates</h1>
+				<a href="https://robaina.github.io/OblateSpheroidal/"><img src="assets/oblatespheroidal.png" alt="Responsive image"></a>
+			</div>
+			<div class="grid_item">
+				<h1 class="grid_item_title">Function plotter</h1>
+				<a href="https://robaina.github.io/functionPlotter/"><img src="assets/functionplotter.png" alt="Responsive image"></a>
+			</div>
+
 		</div>
 
-	</div>
-
-</body>
-
+	</body>
 </html>
