--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			</div>
 			<div class="grid_item">
 				<h1 class="grid_item_title">Metabolic flux orders</h1>
-				<a href="https://robaina.github.io/FluxOrders/"><img src="assets/fluxorders.png" alt="Responsive image"></a>
+				<a href="https://robaina.github.io/fluxOrders/"><img src="assets/fluxorders.png" alt="Responsive image"></a>
 			</div>
 			<div class="grid_item">
 				<h1 class="grid_item_title">Ayumu's game</h1>
