--- a/index.html
+++ b/index.html
@@ -16,43 +16,60 @@
 	</head>
 
 	<body>
-
 	  <h1 class="name">
 	  	Semidán Robaina Estévez
+			<br>
+			Front-end developer
 	  </h1>
 
 		<div class="grid_container">
 			<div class="grid_item">
 				<h1 class="grid_item_title">The Pentagram of Venus</h1>
-				<a href="https://robaina.github.io/VenusPentagram/"><img src="assets/pentagram.png" alt="Responsive image"></a>
+				<img src="assets/pentagram.png" alt="Responsive image">
+				<button class="button deployButton" type="button"><a href="https://robaina.github.io/VenusPentagram/">Deploy</a></button>
+				<button class="button codeButton" type="button"><a href="https://github.com/Robaina/VenusPentagram">Code</a></button>
 			</div>
 			<div class="grid_item">
 				<h1 class="grid_item_title">Sudoku solver</h1>
-				<a href="https://robaina.github.io/Sudoku/"><img src="assets/sudoku.png" alt="Responsive image"></a>
+				<img src="assets/sudoku.png" alt="Responsive image">
+				<button class="button deployButton" type="button"><a href="https://robaina.github.io/Sudoku/">Deploy</a></button>
+				<button class="button codeButton" type="button"><a href="https://github.com/Robaina/Sudoku">Code</a></button>
 			</div>
 			<div class="grid_item">
 				<h1 class="grid_item_title">Metabolic flux orders</h1>
-				<a href="https://robaina.github.io/fluxOrders/"><img src="assets/fluxorders.png" alt="Responsive image"></a>
+				<img src="assets/fluxorders.png" alt="Responsive image">
+				<button class="button deployButton" type="button"><a href="https://robaina.github.io/fluxOrders/">Deploy</a></button>
+				<button class="button codeButton" type="button"><a href="https://github.com/Robaina/fluxOrders">Code</a></button>
 			</div>
 			<div class="grid_item">
 				<h1 class="grid_item_title">Ayumu's game</h1>
-				<a href="https://robaina.github.io/AyumuGame/"><img src="assets/ayumu.png" alt="Responsive image"></a>
+				<img src="assets/ayumu.png" alt="Responsive image">
+				<button class="button deployButton" type="button"><a href="https://robaina.github.io/AyumuGame/">Deploy</a></button>
+				<button class="button codeButton" type="button"><a href="https://github.com/Robaina/AyumuGame">Code</a></button>
 			</div>
 			<div class="grid_item">
 				<h1 class="grid_item_title">Simon game</h1>
-				<a href="https://robaina.github.io/SimonGame/"><img src="assets/simon.png" alt="Responsive image"></a>
+				<img src="assets/simon.png" alt="Responsive image">
+				<button class="button deployButton" type="button"><a href="https://robaina.github.io/SimonGame/">Deploy</a></button>
+				<button class="button codeButton" type="button"><a href="https://github.com/Robaina/SimonGame">Code</a></button>
 			</div>
 			<div class="grid_item">
 				<h1 class="grid_item_title">Colorful N-Mobius</h1>
-				<a href="https://robaina.github.io/mobiusArt/"><img src="assets/mobiusart.png" alt="Responsive image"></a>
+				<img src="assets/mobiusart.png" alt="Responsive image">
+				<button class="button deployButton" type="button"><a href="https://robaina.github.io/mobiusArt/">Deploy</a></button>
+				<button class="button codeButton" type="button"><a href="https://github.com/Robaina/mobiusArt">Code</a></button>
 			</div>
 			<div class="grid_item">
 				<h1 class="grid_item_title">Oblate Spheroidal Coordinates</h1>
-				<a href="https://robaina.github.io/OblateSpheroidal/"><img src="assets/oblatespheroidal.png" alt="Responsive image"></a>
+				<img src="assets/oblatespheroidal.png" alt="Responsive image">
+				<button class="button deployButton" type="button"><a href="https://robaina.github.io/OblateSpheroidal/">Deploy</a></button>
+				<button class="button codeButton" type="button"><a href="https://github.com/Robaina/OblateSpheroidal">Code</a></button>
 			</div>
 			<div class="grid_item">
 				<h1 class="grid_item_title">Function plotter</h1>
-				<a href="https://robaina.github.io/functionPlotter/"><img src="assets/functionplotter.png" alt="Responsive image"></a>
+				<img src="assets/functionplotter.png" alt="Responsive image">
+				<button class="button deployButton" type="button"><a href="https://robaina.github.io/functionPlotter/">Deploy</a></button>
+				<button class="button codeButton" type="button"><a href="https://github.com/Robaina/functionPlotter">Code</a></button>
 			</div>
 
 		</div>
