--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 	</head>
 
 	<body>
-	  <h1 class="name">
-	  	Semidán Robaina Estévez
-			<br>
-			Front-end developer
-	  </h1>
+		<div class="header">
+			<div class="name">
+				Semidán Robaina Estévez
+				<br>
+				Front-end developer
+			</div>
+		</div>
 
 		<div class="grid_container">
 			<div class="grid_item" tabindex="0">
