--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 				Semidán Robaina Estévez
 				<br>
 				Front-end developer
+				(Under construction...)
 			</div>
 		</div>
 
@@ -75,6 +76,14 @@
 			</div>
 
 		</div>
+
+  <div id="contact">
+		<p>
+		Inquiries?
+		<a href="mailto:hello@semidanrobaina.com?Subject=Hello" target="_top">Contact here</a>
+		</p>
+	</div>
+
   <script src="sketch.js"></script>
 	</body>
 </html>
