--- a/index.html
+++ b/index.html
@@ -9,81 +9,37 @@
 	  <meta name="author" content="Semidan Robaina Estevez">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Semidán Robaina Estévez</title>
+		<title>Semidán's site</title>
 		<link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32x32.png">
-	  <link rel="stylesheet" href="styles.css">
+		<link href="https://fonts.googleapis.com/css?family=Russo+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/master.css">
 
 	</head>
 
 	<body>
-		<div class="header">
-			<div class="name">
-				Semidán Robaina Estévez
-				<br>
-				Front-end developer
-				(Under construction...)
-			</div>
+
+    <div class="navbar">
+      <p class="name_bracket">[</p>
+      <a class="navbar-item" href="#about">About</a>
+      <a class="navbar-item" href="#research">Research</a>
+      <a class="navbar-item" href="blog.html">Blog</a>
+      <a class="navbar-item" href="web.html">Apps</a>
+      <a class="navbar-item" href="CV.pdf" target="_blank">CV</a>
+      <a class="navbar-item" href="https://github.com/Robaina">GitHub</a>
+    	<a class="navbar-item" href="mailto:hello@semidanrobaina.com?Subject=Hello" target="_top">Contact</a>
+      <p class="name_bracket">]</p>
+    </div>
+
+    <div class="myname">
+      Semidán Robaina Estévez
+    </div>
+		<div class="myrol">
+			Researcher, developer, writer
 		</div>
 
-		<div class="grid_container">
-			<div class="grid_item" tabindex="0">
-				<h1 class="grid_item_title">The Pentagram of Venus</h1>
-				<img class="thumbnail" src="assets/pentagram.png" alt="Responsive image">
-				<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/VenusPentagram/">Deploy</a></button>
-				<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/VenusPentagram">Code</a></button>
-			</div>
-			<div class="grid_item" tabindex="0">
-				<h1 class="grid_item_title">Sudoku solver</h1>
-				<img class="thumbnail" src="assets/sudoku.png" alt="Responsive image">
-				<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/Sudoku/">Deploy</a></button>
-				<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/Sudoku">Code</a></button>
-			</div>
-			<div class="grid_item" tabindex="0">
-				<h1 class="grid_item_title">Metabolic flux orders</h1>
-				<img class="thumbnail" src="assets/fluxorders.png" alt="Responsive image">
-				<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/fluxOrders/">Deploy</a></button>
-				<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/fluxOrders">Code</a></button>
-			</div>
-			<div class="grid_item" tabindex="0">
-				<h1 class="grid_item_title">Ayumu's game</h1>
-				<img class="thumbnail" src="assets/ayumu.png" alt="Responsive image">
-				<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/AyumuGame/">Deploy</a></button>
-				<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/AyumuGame">Code</a></button>
-			</div>
-			<div class="grid_item" tabindex="0">
-				<h1 class="grid_item_title">Simon game</h1>
-				<img class="thumbnail" src="assets/simon.png" alt="Responsive image">
-				<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/SimonGame/">Deploy</a></button>
-				<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/SimonGame">Code</a></button>
-			</div>
-			<div class="grid_item" tabindex="0">
-				<h1 class="grid_item_title">Colorful N-Mobius</h1>
-				<img class="thumbnail" src="assets/mobiusart.png" alt="Responsive image">
-				<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/mobiusArt/">Deploy</a></button>
-				<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/mobiusArt">Code</a></button>
-			</div>
-			<div class="grid_item" tabindex="0">
-				<h1 class="grid_item_title">Oblate Spheroidal Coordinates</h1>
-				<img class="thumbnail" src="assets/oblatespheroidal.png" alt="Responsive image">
-				<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/OblateSpheroidal/">Deploy</a></button>
-				<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/OblateSpheroidal">Code</a></button>
-			</div>
-			<div class="grid_item" tabindex="0">
-				<h1 class="grid_item_title">Function plotter</h1>
-				<img class="thumbnail" src="assets/functionplotter.png" alt="Responsive image">
-				<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/functionPlotter/">Deploy</a></button>
-				<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/functionPlotter">Code</a></button>
-			</div>
 
-		</div>
 
-  <div id="contact">
-		<p>
-		Inquiries?
-		<a href="mailto:hello@semidanrobaina.com?Subject=Hello" target="_top">Contact here</a>
-		</p>
-	</div>
+    <script type="text/javascript" src="sketch.js"></script>
 
-  <script src="sketch.js"></script>
-	</body>
+  </body>
 </html>
