--- a/index.html
+++ b/index.html
@@ -19,15 +19,21 @@
 	<body>
 
     <div class="navbar">
-      <p class="name_bracket">[</p>
+      <p class="nav_bracket">[</p>
       <a class="navbar-item" href="#about">About</a>
+			<p class="vertical-bar">|</p>
       <a class="navbar-item" href="#research">Research</a>
+			<p class="vertical-bar">|</p>
       <a class="navbar-item" href="blog.html">Blog</a>
+			<p class="vertical-bar">|</p>
       <a class="navbar-item" href="web.html">Apps</a>
+			<p class="vertical-bar">|</p>
       <a class="navbar-item" href="CV.pdf" target="_blank">CV</a>
+			<p class="vertical-bar">|</p>
       <a class="navbar-item" href="https://github.com/Robaina">GitHub</a>
+			<p class="vertical-bar">|</p>
     	<a class="navbar-item" href="mailto:hello@semidanrobaina.com?Subject=Hello" target="_top">Contact</a>
-      <p class="name_bracket">]</p>
+      <p class="nav_bracket">]</p>
     </div>
 
     <div class="myname">
