--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
       <p class="nav_bracket">]</p>
     </div>
 
-    <div class="myname">
-      Semidán Robaina Estévez
-    </div>
-		<div class="myrol">
-			Researcher, developer, writer
+		<div class="info">
+			<div class="myname">
+				Semidán Robaina Estévez
+			</div>
+			<div class="myrol">
+				Researcher, developer, writer
+			</div>
 		</div>
-
-
 
     <script type="text/javascript" src="sketch.js"></script>
 
