--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<body>
 
-    <div class="navbar">
+    <menu class="navbar">
       <p class="nav_bracket">[</p>
       <a class="navbar-item" href="#about">About</a>
 			<p class="vertical-bar">|</p>
@@ -34,7 +34,7 @@
 			<p class="vertical-bar">|</p>
     	<a class="navbar-item" href="mailto:hello@semidanrobaina.com?Subject=Hello" target="_top">Contact</a>
       <p class="nav_bracket">]</p>
-    </div>
+    </menu>
 
 		<div class="info">
 			<div class="myname">
@@ -44,6 +44,13 @@
 				Researcher, developer, writer
 			</div>
 		</div>
+
+		<footer class="credentials">
+			<div class="credentials-content">
+				<div class="code-symbol"> < </div> <div class="code-symbol"> > </div>
+				<div>by Semidán Robaina Estévez, 2019</div>
+			</div>
+		</footer>
 
     <script type="text/javascript" src="sketch.js"></script>
 
