--- a/logo.html
+++ b/logo.html
@@ -59,7 +59,7 @@
   </head>
   <body>
 
-    <!--div class="logo-container-simple">
+    <div class="logo-container-simple">
       <svg viewBox="0 0 100 100">
         <defs>
           <linearGradient id="grad2" x1="0%" y1="0%" x2="100%" y2="0%">
@@ -282,7 +282,7 @@
                  stroke="black" fill="url(#grad1)" name="body"/>
 
       </svg>
-    </div-->
+    </div
 
     <br>
 
