--- a/research.html
+++ b/research.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+
     <meta charset="utf-8">
-    <title>Semidán - Blog</title>
+    <title>Semidán - Research</title>
     <link rel="stylesheet" href="/css/master.css">
-    <link rel="stylesheet" href="/css/blog.css">
+    <link rel="stylesheet" href="/css/research.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
@@ -17,8 +18,6 @@
     </script>
 
   </head>
-
-
   <body>
 
     <div id="navbar"></div>
