--- a/webapps.html
+++ b/webapps.html
@@ -9,54 +9,31 @@
 	  <meta name="author" content="Semidan Robaina Estevez">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Semidán Robaina Estévez</title>
-		<link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32x32.png">
-	  <link rel="stylesheet" href="css/apps_styles.css">
+		<title>Semidán - Apps</title>
+		<link rel="icon" type="image/png" sizes="32x32" href="/imgs/favicon-32x32.png">
+		<link rel="stylesheet" href="/css/master.css">
+	  <link rel="stylesheet" href="/css/webapps.css">
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<script>
+			$(function() {
+				$("#navbar").load("/navbar.html");
+			});
+			$(function() {
+				$("#credentials").load("/credentials.html");
+			});
+		</script>
 
 	</head>
 
 	<body>
-		<!-- <div class="header">
-			<div class="logo-container">
-	      <svg viewBox="0 0 100 100">
-	        <defs>
-	          <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
-	            <stop offset="0%" style="stop-color:rgb(255,255,0);stop-opacity:1" />
-	            <stop offset="100%" style="stop-color:rgb(0, 163, 255);stop-opacity:1" />
-	          </linearGradient>
-	          <linearGradient id="grad2" x1="0%" y1="0%" x2="100%" y2="0%">
-	            <stop offset="0%" style="stop-color:rgb(238, 238, 238);stop-opacity:1" />
-	            <stop offset="100%" style="stop-color:rgb(51, 51, 51);stop-opacity:1" />
-	          </linearGradient>
-	          <linearGradient id="grad3" x1="0%" y1="0%" x2="100%" y2="0%">
-	            <stop offset="0%" style="stop-color:rgb(255, 255, 255);stop-opacity:1" />
-	            <stop offset="100%" style="stop-color:rgb(0, 0, 0);stop-opacity:0.8" />
-	          </linearGradient>
-	        </defs> 70, 17
 
-	       <rect x="20" y="20" rx="5" ry="5" width="60" height="60"
-	              style="fill:url(#grad2);stroke:black;stroke-width:1.5;" />
+    <div id="navbar"></div>
 
-	       <polygon points="40,38, 60,38, 70,22"
-	                stroke="black" fill="url(#grad1)" name="first"/>
-
-	       <polygon points="40,40, 60,40, 60,60, 40,60"
-	                stroke="black" fill="url(#grad1)" name="second"/>
-
-	       <polygon points="40,62, 60,62, 30,78"
-	                stroke="black" fill="url(#grad1)" name="third"/>
-
-	      </svg>
-	    </div> -->
-
-
-			<div class="name">
-				Semidán Robaina Estévez
-				<br>
-				Front-end developer
-				(Under construction...)
-			</div>
+		<div class="intro">
+			These are some of the web apps that I have made, mostly to have fun learning HTML5, CSS and vanilla JavaScript. I will update this section with new apps if they deserve to be shown...
 		</div>
+
 
 		<div class="grid_container">
 			<div class="grid_item" tabindex="0">
@@ -110,13 +87,7 @@
 
 		</div>
 
-  <div id="contact">
-		<p>
-		Inquiries?
-		<a href="mailto:hello@semidanrobaina.com?Subject=Hello" target="_top">Contact here</a>
-		</p>
-	</div>
+    <div id="credentials"></div>
 
-  <script src="sketch.js"></script>
 	</body>
 </html>
