Added random color to name characters

--- a/index.html
+++ b/index.html
@@ -35,8 +35,37 @@
 
 		<div class="info">
 			<div class="myname">
-				Semidán Robaina Estévez
+				<!-- Semidán Robaina Estévez -->
+
+				<div class="name-character">S</div>
+				<div class="name-character">e</div>
+				<div class="name-character">m</div>
+				<div class="name-character">i</div>
+				<div class="name-character">d</div>
+				<div class="name-character">á</div>
+				<div class="name-character">n</div>
+
+				<div class="spacer"></div>
+
+				<div class="name-character">R</div>
+				<div class="name-character">o</div>
+				<div class="name-character">b</div>
+				<div class="name-character">a</div>
+				<div class="name-character">i</div>
+				<div class="name-character">n</div>
+				<div class="name-character">a</div>
+
+				<div class="spacer"></div>
+
+				<div class="name-character">E</div>
+				<div class="name-character">s</div>
+				<div class="name-character">t</div>
+				<div class="name-character">é</div>
+				<div class="name-character">v</div>
+				<div class="name-character">e</div>
+				<div class="name-character">z</div>
 			</div>
+			
 			<div class="myrol">
 				Researcher, developer, writer
 			</div>
