--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Semidán - Blog</title>
     <link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="/css/blog.css">
