--- a/research.html
+++ b/research.html
@@ -3,6 +3,7 @@
   <head>
 
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Semidán - Research</title>
     <link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="/css/research.css">
