some changes to css

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 	<body>
 
-    <div id="navbar"></div>
+    <div class="navbar-container" id="navbar"></div>
 
 		<div class="info">
 			<div class="myname">
@@ -65,7 +65,7 @@
 				<div class="name-character">e</div>
 				<div class="name-character">z</div>
 			</div>
-			
+
 			<div class="myrol">
 				Researcher, developer, writer
 			</div>
