--- a/webapps.html
+++ b/webapps.html
@@ -28,7 +28,7 @@
 
 	<body>
 
-    <div id="navbar"></div>
+    <div class="navbar-container" id="navbar"></div>
 
 		<div class="intro">
 			These are some of the web apps that I have made, mostly to have fun learning HTML5, CSS and vanilla JavaScript. I will update this section with new apps if they deserve to be shown...
