--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
   </head>
   <body>
 
-    <div id="navbar"></div>
+    <div class="navbar-container" id="navbar"></div>
 
     <article class="about" id="about">
 
