--- a/research.html
+++ b/research.html
@@ -21,7 +21,7 @@
   </head>
   <body>
 
-    <div id="navbar"></div>
+    <div class="navbar-container" id="navbar"></div>
 
     <h1>Coming soon...</h1>
 
