added active link in navbar

--- a/navbar.html
+++ b/navbar.html
@@ -1,19 +1,19 @@
 <nav class="navbar">
   <p class="nav_bracket">[</p>
-  <a class="navbar-item" href="/index.html">Home</a>
+  <a class="navbar-item" id="home" href="/index.html">Home</a>
   <p class="vertical-bar">|</p>
-  <a class="navbar-item" href="/about.html">About</a>
+  <a class="navbar-item" id="about" href="/about.html">About</a>
   <p class="vertical-bar">|</p>
-  <a class="navbar-item" href="/research.html">Research</a>
+  <a class="navbar-item" id="research" href="/research.html">Research</a>
   <p class="vertical-bar">|</p>
-  <a class="navbar-item" href="/blog.html">Blog</a>
+  <a class="navbar-item" id="blog" href="/blog.html">Blog</a>
   <p class="vertical-bar">|</p>
-  <a class="navbar-item" href="/webapps.html">Apps</a>
+  <a class="navbar-item" id="webapps" href="/webapps.html">Apps</a>
   <p class="vertical-bar">|</p>
-  <a class="navbar-item" href="/assets/CV.pdf" target="_blank">CV</a>
+  <a class="navbar-item" id="cv" href="/assets/CV.pdf" target="_blank">CV</a>
   <p class="vertical-bar">|</p>
-  <a class="navbar-item" href="https://github.com/Robaina">GitHub</a>
+  <a class="navbar-item" id="github" href="https://github.com/Robaina" target="_blank">GitHub</a>
   <p class="vertical-bar">|</p>
-  <a class="navbar-item" href="mailto:hello@semidanrobaina.com?Subject=Hello" target="_top">Contact</a>
+  <a class="navbar-item" id="contact" href="mailto:hello@semidanrobaina.com?Subject=Hello" target="_top">Contact</a>
   <p class="nav_bracket">]</p>
 </nav>
