name characters move on hover

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<title>Semidán - Home</title>
-		<link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon.png">
     <link rel="stylesheet" href="css/master.css">
 		<link rel="stylesheet" href="css/home.css">
 
@@ -23,9 +23,6 @@
 				$("#credentials").load("/credentials.html");
 			});
 		</script>
-
-		<link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32x32.png">
-		<link rel="stylesheet" href="css/master.css">
 
 	</head>
 
