--- a/research.html
+++ b/research.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Semidán - Research</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="/imgs/favicon.png">
     <link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="/css/research.css">
 
