--- a/assets/logo.html
+++ b/assets/logo.html
@@ -68,6 +68,40 @@
           </linearGradient>
           <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
             <stop offset="0%" style="stop-color:rgb(238, 238, 238);stop-opacity:1" />
+            <stop offset="100%" style="stop-color:rgb(51, 51, 51);stop-opacity:1" />
+          </linearGradient>
+          <linearGradient id="grad3" x1="0%" y1="0%" x2="100%" y2="0%">
+            <stop offset="0%" style="stop-color:rgb(255, 255, 255);stop-opacity:1" />
+            <stop offset="100%" style="stop-color:rgb(0, 0, 0);stop-opacity:0.8" />
+          </linearGradient>
+        </defs>
+
+       <!-- <circle cx="50" cy="50" r="40"
+             style="fill:url(#grad2);stroke:black;stroke-width:1.5;" /> -->
+
+       <polygon points="39,37, 61,37, 70,17"
+                stroke="black" fill="url(#grad2)" name="first"/>
+
+       <polygon points="39,39, 61,39, 61,61, 39,61"
+                stroke="black" fill="url(#grad2)" name="second"/>
+
+       <polygon points="39,63, 61,63, 30,83"
+                stroke="black" fill="url(#grad2)" name="third"/>
+
+      </svg>
+    </div>
+
+    <br>
+
+    <div class="logo-container-simple">
+      <svg viewBox="0 0 100 100">
+        <defs>
+          <linearGradient id="grad2" x1="0%" y1="0%" x2="100%" y2="0%">
+            <stop offset="0%" style="stop-color:rgb(255,255,0);stop-opacity:1" />
+            <stop offset="100%" style="stop-color:rgb(0, 163, 255);stop-opacity:1" />
+          </linearGradient>
+          <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
+            <stop offset="0%" style="stop-color:rgb(238, 238, 238);stop-opacity:1" />
             <stop offset="0%" style="stop-color:rgb(135, 135, 135);stop-opacity:1" />
           </linearGradient>
           <linearGradient id="grad3" x1="0%" y1="0%" x2="100%" y2="0%">
