--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Semidán - Blog</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="/imgs/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="imgs/logo1.png">
+    <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="/css/blog.css">
 
