--- a/webapps.html
+++ b/webapps.html
@@ -10,7 +10,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<title>Semidán - Apps</title>
-		<link rel="icon" type="image/png" sizes="32x32" href="/imgs/favicon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="imgs/logo1.png">
+    <link rel="stylesheet" href="css/master.css">
 		<link rel="stylesheet" href="/css/master.css">
 	  <link rel="stylesheet" href="/css/webapps.css">
 
