removed tabs, added github, mail, twitter links

--- a/navbar.html
+++ b/navbar.html
@@ -9,11 +9,14 @@
   <a class="navbar-item" id="blog" href="/blog.html">Blog</a>
   <p class="vertical-bar">|</p>
   <a class="navbar-item" id="webapps" href="/webapps.html">Apps</a>
+
+  <!-- <p class="vertical-bar">|</p>
+  <a class="navbar-item" id="cv" href="/assets/CV.pdf" target="_blank">CV</a> -->
+  <!-- <p class="vertical-bar">|</p>
+  <a class="navbar-item" id="github" href="https://github.com/Robaina" target="_blank">GitHub</a> -->
+
   <p class="vertical-bar">|</p>
-  <a class="navbar-item" id="cv" href="/assets/CV.pdf" target="_blank">CV</a>
-  <p class="vertical-bar">|</p>
-  <a class="navbar-item" id="github" href="https://github.com/Robaina" target="_blank">GitHub</a>
-  <p class="vertical-bar">|</p>
-  <a class="navbar-item" id="contact" href="mailto:hello@semidanrobaina.com?Subject=Hello" target="_top">Contact</a>
+  <!-- <a class="navbar-item" id="contact" href="mailto:hello@semidanrobaina.com?Subject=Hello" target="_top">Contact</a> -->
+  <a class="navbar-item" id="contact" href="/contact.html">Contact</a>
   <p class="nav_bracket">]</p>
 </nav>
