--- a/assets/logo.html
+++ b/assets/logo.html
@@ -66,6 +66,29 @@
             <stop offset="0%" style="stop-color:rgb(255,255,0);stop-opacity:1" />
             <stop offset="100%" style="stop-color:rgb(0, 163, 255);stop-opacity:1" />
           </linearGradient>
+        </defs>
+
+       <rect x="30" y="30" width="30" height="10" rx="4" ry="4"
+             fill="url(#grad2)" stroke="black" stroke-width="1" transform = "rotate(-25,15,15)"/>
+
+       <rect x="25" y="42" width="20" height="10" rx="4" ry="4"
+             fill="url(#grad2)" stroke="black" stroke-width="1" transform = "rotate(-25,15,15)"/>
+
+       <rect x="10" y="54" width="30" height="10" rx="4" ry="4"
+             fill="url(#grad2)" stroke="black" stroke-width="1" transform = "rotate(-25,15,15)"/>
+
+      </svg>
+    </div>
+
+    <br>
+
+    <div class="logo-container-simple">
+      <svg viewBox="0 0 100 100">
+        <defs>
+          <linearGradient id="grad2" x1="0%" y1="0%" x2="100%" y2="0%">
+            <stop offset="0%" style="stop-color:rgb(255,255,0);stop-opacity:1" />
+            <stop offset="100%" style="stop-color:rgb(0, 163, 255);stop-opacity:1" />
+          </linearGradient>
           <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
             <stop offset="0%" style="stop-color:rgb(238, 238, 238);stop-opacity:1" />
             <stop offset="100%" style="stop-color:rgb(51, 51, 51);stop-opacity:1" />
