--- a/index.html
+++ b/index.html
@@ -32,35 +32,35 @@
 
 		<div class="info">
 			<div class="myname">
-				<!-- Semidán Robaina Estévez -->
+        <div class="name-wrapper" id="name">
+					<div class="name-character">S</div>
+					<div class="name-character">e</div>
+					<div class="name-character">m</div>
+					<div class="name-character">i</div>
+					<div class="name-character">d</div>
+					<div class="name-character">á</div>
+					<div class="name-character">n</div>
+				</div>
 
-				<div class="name-character">S</div>
-				<div class="name-character">e</div>
-				<div class="name-character">m</div>
-				<div class="name-character">i</div>
-				<div class="name-character">d</div>
-				<div class="name-character">á</div>
-				<div class="name-character">n</div>
+				<div class="name-wrapper" id="surname1">
+					<div class="name-character">R</div>
+					<div class="name-character">o</div>
+					<div class="name-character">b</div>
+					<div class="name-character">a</div>
+					<div class="name-character">i</div>
+					<div class="name-character">n</div>
+					<div class="name-character">a</div>
+        </div>
 
-				<div class="spacer"></div>
-
-				<div class="name-character">R</div>
-				<div class="name-character">o</div>
-				<div class="name-character">b</div>
-				<div class="name-character">a</div>
-				<div class="name-character">i</div>
-				<div class="name-character">n</div>
-				<div class="name-character">a</div>
-
-				<div class="spacer"></div>
-
-				<div class="name-character">E</div>
-				<div class="name-character">s</div>
-				<div class="name-character">t</div>
-				<div class="name-character">é</div>
-				<div class="name-character">v</div>
-				<div class="name-character">e</div>
-				<div class="name-character">z</div>
+        <div class="name-wrapper" id="surname2">
+					<div class="name-character">E</div>
+					<div class="name-character">s</div>
+					<div class="name-character">t</div>
+					<div class="name-character">é</div>
+					<div class="name-character">v</div>
+					<div class="name-character">e</div>
+					<div class="name-character">z</div>
+				</div>
 			</div>
 
 			<div class="myrol">
