--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         $("#navbar").load("/navbar.html");
       });
       $(function() {
-        $("#credentials").load("/credentials.html");
+        $("#credits").load("/credits.html");
       });
     </script>
   </head>
@@ -34,7 +34,7 @@
 
     </article>
 
-    <div id="credentials"></div>
+    <div id="credits"></div>
 
 
   </body>
