--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         $("#navbar").load("/navbar.html");
       });
       $(function() {
-        $("#credentials").load("/credentials.html");
+        $("#credits").load("/credits.html");
       });
     </script>
   </head>
@@ -36,7 +36,7 @@
 
     </div>
 
-    <div id="credentials"></div>
+    <div id="credits"></div>
 
   </body>
 </html>
