--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				$("#navbar").load("/navbar.html");
 			});
 			$(function() {
-				$("#credentials").load("/credentials.html");
+				$("#credits").load("/credits.html");
 			});
 		</script>
 
@@ -68,9 +68,10 @@
 			</div>
 		</div>
 
-		<div id="credentials"></div>
+		<div id="credits"></div>
 
     <script src="art.js"></script>
+		<!-- <script src="/assets/script.js"></script> -->
 
   </body>
 </html>
