--- a/navbar.html
+++ b/navbar.html
@@ -3,6 +3,7 @@
   <a class="navbar-item" id="home" href="/index.html">Home</a>
   <p class="vertical-bar">|</p>
   <a class="navbar-item" id="about" href="/about.html">About</a>
+  <!-- <div class="navbar-item-2" id="about" onclick="transitionToPage('/about.html')">About</div> -->
   <p class="vertical-bar">|</p>
   <a class="navbar-item" id="research" href="/research.html">Research</a>
   <p class="vertical-bar">|</p>
