--- a/research.html
+++ b/research.html
@@ -15,7 +15,7 @@
         $("#navbar").load("/navbar.html");
       });
       $(function() {
-        $("#credentials").load("/credentials.html");
+        $("#credits").load("/credits.html");
       });
     </script>
 
@@ -26,7 +26,7 @@
 
     <h1>Coming soon...</h1>
 
-    <div id="credentials"></div>
+    <div id="credits"></div>
 
   </body>
 </html>
