--- a/webapps.html
+++ b/webapps.html
@@ -20,7 +20,7 @@
 				$("#navbar").load("/navbar.html");
 			});
 			$(function() {
-				$("#credentials").load("/credentials.html");
+				$("#credits").load("/credits.html");
 			});
 		</script>
 
@@ -87,7 +87,7 @@
 
 		</div>
 
-    <div id="credentials"></div>
+    <div id="credits"></div>
 
 	</body>
 </html>
