--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
         $("#navbar").load("/navbar.html");
       });
       $(function() {
-        $("#credentials").load("/credentials.html");
+        $("#credits").load("/credits.html");
       });
     </script>
 
@@ -27,7 +27,7 @@
 
     <h1>Coming soon...</h1>
 
-    <div id="credentials"></div>
+    <div id="credits"></div>
 
   </body>
 </html>
