trying page transitions

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<div id="credits"></div>
 
     <script src="art.js"></script>
-		<!-- <script src="/assets/script.js"></script> -->
+		<script src="/transitions.js"></script>
 
   </body>
 </html>
