--- a/navbar.html
+++ b/navbar.html
@@ -1,15 +1,27 @@
 <nav class="navbar">
   <p class="nav_bracket">[</p>
-  <a class="navbar-item" id="home" href="/index.html">Home</a>
+  <!-- <a class="navbar-item" id="home" href="/index.html">Home</a> -->
+  <div class="navbar-item" id="home" onclick="transitionToPage('/index.html')">Home</div>
+
   <p class="vertical-bar">|</p>
+
   <!-- <a class="navbar-item" id="about" href="/about.html">About</a> -->
   <div class="navbar-item" id="about" onclick="transitionToPage('/about.html')">About</div>
+
   <p class="vertical-bar">|</p>
-  <a class="navbar-item" id="research" href="/research.html">Research</a>
+
+  <!-- <a class="navbar-item" id="research" href="/research.html">Research</a> -->
+  <div class="navbar-item" id="research" onclick="transitionToPage('/research.html')">Research</div>
+
   <p class="vertical-bar">|</p>
-  <a class="navbar-item" id="blog" href="/blog.html">Blog</a>
+
+  <!-- <a class="navbar-item" id="blog" href="/blog.html">Blog</a> -->
+  <div class="navbar-item" id="blog" onclick="transitionToPage('/blog.html')">Blog</div>
+
   <p class="vertical-bar">|</p>
-  <a class="navbar-item" id="webapps" href="/webapps.html">Apps</a>
+
+  <!-- <a class="navbar-item" id="webapps" href="/webapps.html">Apps</a> -->
+  <div class="navbar-item" id="webapps" onclick="transitionToPage('/webapps.html')">Apps</div>
 
   <!-- <p class="vertical-bar">|</p>
   <a class="navbar-item" id="cv" href="/assets/CV.pdf" target="_blank">CV</a> -->
@@ -18,6 +30,9 @@
 
   <p class="vertical-bar">|</p>
   <!-- <a class="navbar-item" id="contact" href="mailto:hello@semidanrobaina.com?Subject=Hello" target="_top">Contact</a> -->
-  <a class="navbar-item" id="contact" href="/contact.html">Contact</a>
+
+  <!-- <a class="navbar-item" id="contact" href="/contact.html">Contact</a> -->
+  <div class="navbar-item" id="contact" onclick="transitionToPage('/contact.html')">Contact</div>
+
   <p class="nav_bracket">]</p>
 </nav>
