shows my logo during page transitions

--- a/assets/logo.html
+++ b/assets/logo.html
@@ -68,14 +68,14 @@
           </linearGradient>
         </defs>
 
-       <rect x="30" y="30" width="30" height="10" rx="4" ry="4"
-             fill="url(#grad2)" stroke="black" stroke-width="1" transform = "rotate(-25,15,15)"/>
+       <rect x="20" y="29" width="60" height="20" rx="4" ry="4"
+             fill="url(#grad2)" stroke="grey" stroke-width="1" transform = "rotate(-25,15,15)"/>
 
-       <rect x="25" y="42" width="20" height="10" rx="4" ry="4"
-             fill="url(#grad2)" stroke="black" stroke-width="1" transform = "rotate(-25,15,15)"/>
+       <rect x="10" y="53" width="40" height="20" rx="4" ry="4"
+             fill="url(#grad2)" stroke="grey" stroke-width="1" transform = "rotate(-25,15,15)"/>
 
-       <rect x="10" y="54" width="30" height="10" rx="4" ry="4"
-             fill="url(#grad2)" stroke="black" stroke-width="1" transform = "rotate(-25,15,15)"/>
+       <rect x="-10" y="77" width="60" height="20" rx="4" ry="4"
+             fill="url(#grad2)" stroke="grey" stroke-width="1" transform = "rotate(-25,15,15)"/>
 
       </svg>
     </div>
