--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	  <meta name="author" content="Semidan Robaina Estevez">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Semidán - Home</title>
+		<title>Semidán: Home</title>
 		<link rel="icon" type="image/png" sizes="32x32" href="imgs/logo1.png">
 		<script src="/transitions.js"></script>
     <link rel="stylesheet" href="css/master.css">
@@ -23,6 +23,8 @@
 			$(function() {
 				$("#credits").load("/credits.html");
 			});
+			let logo = new Image();
+			logo.src = "/imgs/logo1.png";
 		</script>
 
 	</head>
@@ -30,7 +32,7 @@
 	<body>
 
     <div class="navbar-container" id="navbar"></div>
-
+    
 		<div class="info">
 			<div class="myname">
         <div class="name-wrapper" id="name">
