--- a/research.html
+++ b/research.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Semidán - Research</title>
+    <title>Semidán: Research</title>
     <link rel="icon" type="image/png" sizes="32x32" href="imgs/logo1.png">
     <link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="/css/research.css">
@@ -17,6 +17,8 @@
       $(function() {
         $("#credits").load("/credits.html");
       });
+      let logo = new Image();
+      logo.src = "/imgs/logo1.png";
     </script>
 
   </head>
