--- a/webapps.html
+++ b/webapps.html
@@ -9,7 +9,7 @@
 	  <meta name="author" content="Semidan Robaina Estevez">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Semidán - Apps</title>
+		<title>Semidán: Apps</title>
 		<link rel="icon" type="image/png" sizes="32x32" href="imgs/logo1.png">
 		<link rel="stylesheet" href="/css/master.css">
 	  <link rel="stylesheet" href="/css/webapps.css">
@@ -22,6 +22,8 @@
 			$(function() {
 				$("#credits").load("/credits.html");
 			});
+			let logo = new Image();
+			logo.src = "/imgs/logo1.png";
 		</script>
 
 	</head>
