--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <p class="nav_bracket">[</p>
 
-  <div class="navbar-item" id="home" onclick="goToPage('/index.html')">Home</div>
+  <div class="navbar-item" id="home" onclick="goToPage('/home.html')">Home</div>
 
   <p class="vertical-bar">|</p>
 
