modified logo a little bit

--- a/assets/transition_logo.html
+++ b/assets/transition_logo.html
@@ -31,14 +31,14 @@
           </linearGradient>
         </defs>
 
-       <rect x="20" y="29" width="60" height="20" rx="4" ry="4"
-             fill="url(#grad2)" stroke="grey" stroke-width="1" transform = "rotate(-25,15,15)"/>
+       <rect x="11.5" y="29" width="65" height="18" rx="10" ry="10"
+             fill="url(#grad2)" stroke="rgb(54, 54, 54)" stroke-width="1" transform = "rotate(-25,15,15)"/>
 
-       <rect x="10" y="53" width="40" height="20" rx="4" ry="4"
-             fill="url(#grad2)" stroke="grey" stroke-width="1" transform = "rotate(-25,15,15)"/>
+       <rect x="10" y="53" width="40" height="18" rx="10" ry="10"
+             fill="url(#grad2)" stroke="rgb(54, 54, 54)" stroke-width="1" transform = "rotate(-25,15,15)"/>
 
-       <rect x="-10" y="77" width="60" height="20" rx="4" ry="4"
-             fill="url(#grad2)" stroke="grey" stroke-width="1" transform = "rotate(-25,15,15)"/>
+       <rect x="-17" y="77" width="65" height="18" rx="10" ry="10"
+             fill="url(#grad2)" stroke="rgb(54, 54, 54)" stroke-width="1" transform = "rotate(-25,15,15)"/>
 
       </svg>
     </div>
