favicon and Edge...

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<title>Semidán's site</title>
-		<link rel="icon" type="image/png" sizes="32x32" href="imgs/logo1.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png
     <link rel="stylesheet" href="css/index.css">
 
 		<script>
