--- a/research.html
+++ b/research.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Semidán: Research</title>
-	  <link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png
     <link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="/css/research.css">
 
